fixed viewheight issue on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
 
 html {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
